added routing in App.js

--- a/src/components/2Modules/Navbar/Navbar.scss
+++ b/src/components/2Modules/Navbar/Navbar.scss
@@ -4,9 +4,10 @@
     border-bottom: 1px solid #cecece;
     box-shadow: black 10px solid;
     display: flex;
-    // justify-content: space-around;
+    justify-content:space-between;
+    
     .logo{
-       flex-basis: 60%; 
+       
        display: flex;
        padding-top: 0.5rem;
        padding-left: 10rem;
@@ -23,9 +24,8 @@
 
 }
 .signup-button{
-        flex-basis: 40%;
         padding-top : 8px;
-        
+        padding-right: 10rem;
 }
 
 
